--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "start": "webpack-dev-server",
     "clean": "rimraf dist",
     "production": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
-    "lint": "eslint ./app/**/**.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "coverage": "jest --coverage",
-    "precommit": "cross-env npm run lint && npm test",
-    "prepush": "cross-env npm run lint && npm test"
+    "coverage": "jest --coverage"
   },
   "author": "Kliment Petrov <kleopetroff@gmail.com>",
   "license": "MIT",
@@ -30,15 +27,18 @@
   },
   "dependencies": {
     "cross-env": "5.1.1",
+    "material-ui": "^1.0.0-beta.21",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "prop-types": "^15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
+    "react-dropzone": "^4.2.3",
     "react-hot-loader": "3.1.2",
     "react-router-dom": "4.2.0"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
@@ -46,19 +46,12 @@
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-2": "6.24.1",
     "copy-webpack-plugin": "4.1.1",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.7",
     "enzyme": "3.2.0",
     "enzyme-adapter-react-16": "1.1.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "15.1.0",
-    "eslint-loader": "1.8.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.0",
-    "eslint-plugin-react": "7.2.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.4",
     "html-webpack-plugin": "2.30.0",
-    "husky": "0.15.0-beta.2",
     "jest": "21.2.0",
     "node-sass": "4.6.1",
     "open-browser-webpack-plugin": "0.0.5",
