--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "react-webpack-boilerplate",
+  "name": "teamNoPlan",
   "version": "2.0.0",
-  "description": "Minimalistic ES6 React boilerplate",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "clean": "rimraf dist",
-    "production": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
+    "production":
+      "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage"
   },
-  "author": "Kliment Petrov <kleopetroff@gmail.com>",
   "license": "MIT",
   "jest": {
-    "setupFiles": [
-      "<rootDir>/shim.js"
-    ],
+    "setupFiles": ["<rootDir>/shim.js"],
     "mapCoverage": true,
-    "collectCoverageFrom": [
-      "app/**/*.{js,jsx,ts,tsx}"
-    ],
-    "testMatch": [
-      "**/?(*.)(spec|test).js?(x)"
-    ]
+    "collectCoverageFrom": ["app/**/*.{js,jsx,ts,tsx}"],
+    "testMatch": ["**/?(*.)(spec|test).js?(x)"]
   },
   "dependencies": {
     "cross-env": "5.1.1",
