--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "cross-env": "5.1.1",
+    "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.21",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
